# GTA2_FILES

./: .gitignore  Menu_structure.md  MissionScriptObjects.cpp  MissionScriptObjects.h  PROJECT_SPLIT_SUMMARY.md  Ped.h  analyze_structures.py  done.md  extract_structures.py  ВАЖНО_DIRECTX_VERSION.md  ПОМЕТКИ_ДЛЯ_ЧАТОВ.md  Работа.md  пометки.md  пометки_Menu.md  требование.md
3dfx/: 3dfx.vcproj  3dfx.vcxproj  3dfx.vcxproj.filters
binkw32/: binkw32.vcproj  binkw32.vcxproj
d3ddll/: d3ddll.cpp  d3ddll.h  d3ddll.vcproj  d3ddll.vcxproj  d3ddll.vcxproj.filters
d3ddll/Release/: d3ddll.dll.recipe  d3ddll.vcxproj.FileListAbsolute.txt
d3dpoly/: d3dpoly.vcproj  d3dpoly.vcxproj
dmaglide/: dmaglide.vcproj  dmaglide.vcxproj
dmavideo/: dmavideo.cpp  dmavideo.h  dmavideo.vcproj  dmavideo.vcxproj  dmavideo.vcxproj.filters
dmavideo/Debug/: dmavideo.dll.recipe  dmavideo.ilk  dmavideo.vcxproj.FileListAbsolute.txt  vc143.idb
dmavideo/Release/: dmavideo.dll.recipe  dmavideo.vcxproj.FileListAbsolute.txt
gta2/: REVISION_REPORT.md
gta2.exe/ida/: gta2.exe.c
gta2/src/car/: car.c  (+1 more)
gta2_project/: COMPILE_STATUS.md  FUNCTION_RENAMES.md  Makefile  README.md  README_COLLISION.md  RENAME_LOG.md  RENAME_SUMMARY.md  REVERSE_ENGINEERING_LOG.md  STRUCTURE_RENAMES.md  VEHICLE_HIERARCHY_FIX.md  generate_rename_doc.py  rename_batch_1.sh  rename_batch_2.sh  rename_batch_3.sh  rename_batch_4.sh  rename_batch_5.sh  rename_batch_6.sh  rename_functions.py  split_by_structures.py  split_code.py  struct_functions_map.txt
gta2_project_c/: CMakeLists.txt  test_menuslotconfig.cpp
gta2_project_c/docs/: MissionManager_Addresses.md  PED_ANALYSIS.md
gta2_project_c/include/: Car.h  CarSystemManager.h  Gang.h  InitWindow.h  MissionManager.h  MissionScriptObject.h  Ped.h  Player.h  PlayerSlotConfig.h  S27.h  ScriptThread.h  TrafficManager.c  TrafficManager.h  Weapon.h  WeatherManager.h  audio_manager.h  dmaudio.h  entities.h  gang.h  gangs.h  menu.h  player.h  player_stats.h  police.h  police_roadblock.h  types.h
gta2_project_c/include/entities/: CameraManager.h  MissionManager.h
gta2_project_c/include/gta2/: Car.h  CarDoor.h  Game.h  GameObject.h  InitWindow.h  Menu.h  MenuSlotConfig.h  Passenger.h  Ped.h  Player.h  Weapon.h  entities.h  gta2_types.h
gta2_project_c/src/: CameraManager.c  Car.c  Game.c  GameObject.c  Gang.c  InitWindow.cpp  Menu.c  MissionManager.c  MissionScriptObject.c  Ped.c  Player.c  ScriptThread.c  TrafficManager.c  Weapon.c  WeatherManager.c  audio_manager.c  dmaudio.c  entities.c  gang.c  gangs.c  main.cpp  menu.c  ped.c  player.c  player_stats.c  police.c  police_roadblock.c  s138.c
gta2_project_c/src/entities/: CarSystemManager.c  MissionManager.c
gta2_project_cpp/: CMakeLists.txt  CMakeLists_test_playerstats.txt  Car.cpp  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Gang.cpp  Ped.cpp  Ped.h  Player.cpp  Player.h  Weapon.cpp  test_all_structures.cpp  test_display.cpp  test_entitymanager.cpp  test_gameobject.cpp  test_initwindow.cpp  test_menuitemconfig.cpp  test_menustringslot.cpp  test_missionobjective.cpp  test_pathnode.cpp  test_playerstats.cpp
gta2_project_cpp/build_pathnode/: CMakeCache.txt  Makefile  cmake_install.cmake
gta2_project_cpp/build_playerstats/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  test_playerstats
gta2_project_cpp/include/: Car.h  DebugProfiler.h  EntityManager.h  InitWindow.h  MenuStringSlot.h  MissionObjective.h  MissionScriptObject.h  MissionScriptObjectsManager.h  Ped.h  PlayerSlotConfig.h  RenderManager.h  TrafficManager.h  Weapon.h  audio_manager.h  dmaudio.h  filemgr.h  gang.h  gangs.h  gta2_types.h  menu.h  player.h  player_stats.h  police.h  police_roadblock.h  s138.h
gta2_project_cpp/include/gta2/: Car.h  CarDoor.h  Display.h  EntityManager.h  Game.h  GameObject.h  Gang.h  InitWindow.h  Menu.h  MenuItemConfig.h  MenuSlotConfig.h  Passenger.h  PathNode.h  Ped.h  Player.h  PlayerStats.h  README.md  Weapon.h  gta2_forward.h  gta2_types.h
gta2_project_cpp/src/: Car.cpp  DebugProfiler.cpp  Display.cpp  EntityManager.cpp  Game.cpp  GameObject.cpp  Gang.cpp  InitWindow.cpp  Menu.cpp  MenuItemConfig.cpp  MenuSlotConfig.cpp  MenuStringSlot.cpp  MissionObjective.cpp  MissionScriptObject.cpp  MissionScriptObjectsManager.cpp  PathNode.cpp  Ped.cpp  Player.cpp  PlayerSlotConfig.cpp  PlayerStats.cpp  RenderManager.cpp  TrafficManager.cpp  Weapon.cpp  audio_manager.cpp  dmaudio.cpp  gang.cpp  gangs.cpp  menu.cpp  player.cpp  player_stats.cpp  police.cpp  police_roadblock.cpp  s138.cpp
gta2_project_cpp/src/gta2/: PlayerStats.cpp
gta2_project_cpp/structures_auto/: ANON_OBJECT_HEADER.h  ANON_OBJECT_HEADER_BIGOBJ.h  ANON_OBJECT_HEADER_V2.h  APARTMENT_SHUTDOWN_REGISTRATION_COOKIE__.h  APPLICATION_VIEW_DATA.h  ARM_PARAMS.h  ARRAY_INFO.h  ASSOCIATIONELEMENT.h  AUDIT_CALLBACK_INFO.h  ActivatableClassRegInputEntry.h  Ambulance.h  Animation.h  ApartmentEntry.h  Arsenal.h  AudioSourceParams.h  BITMAPV4HEADER.h  BITMAPV5HEADER.h  BREAK_ON_STATUS_BUFFER.h  BSMINFO.h  BaseCar.h  BuildingModel.h  Bus.h  CATEGORY_INFO.h  CBmpLoader.h  CEndpointsTable.h  CForcedDropTarget.h  CInternalPageAllocator.h  CM_COLUMNINFO.h  CM_Power_Data_s.h  COMPAT_CACHE_FLAGS.h  CONFIRMSAFETY.h  CONFIRM_CONFLICT_ITEM.h  CONFIRM_CONFLICT_RESULT_INFO.h  CONTAINERTHAT.h  CONTAINERTHIS.h  COPYFILE2_MESSAGE.h  CORRELATION_VECTOR.h  CO_DEVICE_CATALOG_COOKIE__.h  CO_MTA_USAGE_COOKIE__.h  CPPEH_RECORD.h  (+1978 more)
mss32/: mss32.vcproj  mss32.vcxproj
mssds3dh/: mssds3dh.vcproj  mssds3dh.vcxproj
polygon/: polygon.vcproj  polygon.vcxproj
structures_dump/: ALL_STRUCTURES_SUMMARY.txt  Arsenal.txt  AudioSourceParams.txt  CPPEH_RECORD.txt  Car.txt  CarDoor.txt  CarSystemManager.txt  CarTransforms.txt  EngineStruct.txt  EventHandler.txt  FuncInfoV1.txt  GameObject.txt  Gang.txt  GangInfo.txt  Gangs.txt  HBRUSH__.txt  HICON__.txt  HINSTANCE__.txt  HKEY__.txt  HWND__.txt  Model.txt  Passenger.txt  Ped.txt  Player.txt  S103.txt  S104.txt  S10__a.txt  S11__a.txt  S12__d.txt  S131.txt  S161.txt  S169.txt  S218.txt  S2_111.txt  S32.txt  S39.txt  S3_f.txt  S41.txt  S4_d.txt  S65.txt  (+63 more)
(+6084 files in other folders)
